assets/sass/components/global/_googlesitekit-header.scss
/**
 * Header styles.
 *
 * Site Kit by Google, Copyright 2021 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.googlesitekit-plugin {

	.googlesitekit-subheader {
		background-color: $c-base;
		position: relative;
		z-index: 11;

		@media (min-width: $bp-tablet) {
			padding: 0 10px;
		}

		&:not(:empty) {
			border-bottom: 1px solid $c-utility-divider;
		}
	}

	.googlesitekit-header {

		@include googlesitekit-inner-padding;
		background-color: $c-base;
		left: 0;
		position: sticky;
		right: 0;
		top: 0;
		transition: box-shadow $t-default ease-in-out;
		z-index: 12;

		.wp-responsive-open & {
			margin-left: -18px;
			padding-left: 28px;
		}

		body.googlesitekit-showing-feature-tour & {
			position: static;
		}

		body.admin-bar & {

			@media (min-width: $width-tablet + 1 + px) {
				top: 46px;
			}

			@media (min-width: $bp-wpAdminBarTablet) {
				top: 32px;
			}
		}

		.googlesitekit-header__logo {
			// prevent the logo from wrapping towards the tablet and mobile breakpoints
			min-width: 150px;

			@media (max-width: $bp-xsmallOnly) {
				min-width: 100px;
			}
		}

		.googlesitekit-header__logo-link {
			display: inline-block;
		}

		.googlesitekit-header__button {
			align-items: center;
			background-color: transparent;
			cursor: pointer;
			display: flex;
			font-size: $fs-body-sm;
			letter-spacing: $ls-xs;
			margin-right: -8px;
			padding: 8px;
			transition: background-color $t-default ease-in-out, color $t-default ease-in-out;

			&:hover {
				background-color: $c-background-brand;
				color: $c-base;
				text-decoration: none;
			}

			svg {
				fill: currentColor;
				margin-left: $grid-gap-phone / 2;
			}
		}

		.googlesitekit-dropdown-menu {
			display: inline-block;

			.mdc-button__icon {
				margin-right: 12px;
			}

			.mdc-button__account {
				margin-right: 0;
			}

			.mdc-button__icon,
			.mdc-button__icon--image {
				// increase default button image size
				height: 28px;
				width: 28px;
			}

			.mdc-button__label {
				font-weight: $fw-normal;
			}
		}

		.googlesitekit-date-range-selector {

			@media (max-width: $bp-mobileOnly) {

				background: none;
			}

			svg {
				margin-right: 0;

				@media (min-width: $bp-tablet) {
					margin-right: $grid-gap-phone / 2;
				}
			}

			.mdc-button--dropdown {
				color: $c-surfaces-on-surface-variant;
				padding-right: $grid-gap-desktop;

				@media (max-width: $bp-mobileOnly) {
					background: none;
					margin-right: 0;
					padding-right: 8px;
				}

				svg {

					@media (max-width: $bp-mobileOnly) {
						margin-right: 0;
					}
				}
			}

			.mdc-menu-surface {
				right: 0;
			}
		}

		.googlesitekit-user-selector {

			.mdc-button__label {

				@media (max-width: $bp-wpAdminBarTablet) {

					@include screen-reader-only;
				}
			}

			.mdc-button__icon {

				@media (max-width: $bp-wpAdminBarTablet) {
					margin-right: 0;
				}
			}

			// align the dropdown with it's button
			margin-right: -4px;

			button {
				padding: 4px;
			}
		}

		.googlesitekit-header__children {
			align-items: center;
			display: flex;
			gap: $grid-gap-phone;
			justify-content: flex-end;

			@media (min-width: $bp-desktop) {
				gap: $grid-gap-desktop;
			}

			div > button > .mdc-button__label {
				display: none;

				@media (min-width: $width-wpAdminBarTablet + 1 + px) {
					display: inline-block;
				}
			}
		}
	}
}

